# us-crypto-zillqa-etl

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
env-deploy/: local_stack_compose.yml
env-deploy/Airflow/: Dockerfile  airflow_compose.yml  new_ariflow.yml  requirements_airflow.txt  v2_ariflow.yml  webserver_config_local.py
env-deploy/volume/cache/: machine.json
pipeline_configs/: all_in_one.yml  daily_volume_crypto_v2.yml  example.yml
src/: localstack_s3_ex.py  pipeline.py  pipelinev2.py
src/sqls/: daily_energy_consumption.sql  daily_volume_crypto.sql  example.sql  monthly_active_addresses.sql
tmp/daily_volume_crypto_v2/processed_date=2024-02-12/: daily_volume_crypto_v2.parquet
