[tool.poetry]
name = "zillqa-crypto-etl"
version = "0.1.0"
description = ""
authors = ["codefox <isuranimalasiri@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
google-cloud-bigquery = "^3.17.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
